unpackaged/main/default/objects/Sales_by_year__c/Sales_by_year__c.object-meta.xml
<CustomObject>
    <label>Sales Target</label>
    <nameField>
        <displayFormat>H-Sales - {000}</displayFormat>
        <label>Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>