unpackaged/main/default/objects/Sales_by_year__c/fields/Q1_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Q1_Sales_Actual__c</fullName>
    <label>Current Year Q1 Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>