unpackaged/main/default/objects/Sales_by_year__c/fields/Q3_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Q3_Sales_Target__c</fullName>
    <label>Current Year Q3 - Target</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>