unpackaged/main/default/objects/Sales_by_year__c/fields/Total_2017_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_2017_Sales__c</fullName>
    <formula>X2017_Q1_Actual_Sales__c +
X2017_Q2_Actual_Sales__c +
X2017_Q3_Actual_Sales__c +
X2017_Q4_Actual_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Previous Year Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>