unpackaged/main/default/objects/Sales_by_year__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Q1_Sales_Target__c +
Q2_Sales_Target__c +
Q3_Sales_Target__c +
Q4_Sales_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>