unpackaged/main/default/objects/Sales_by_year__c/fields/Total_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual__c</fullName>
    <formula>Q1_Sales_Actual__c +
Q2_Sales_Actual__c +
Q3_Sales_Actual__c +
Q4_Sales_Actual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Current Year Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>