unpackaged/main/default/objects/Sales_by_year__c/fields/X2017_Actual_Sales__c.field-meta.xml
<CustomField>
    <fullName>X2017_Actual_Sales__c</fullName>
    <label>TO DELETE**</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>